Correct alignment, remove button borders, import then set font variations for all sections except last.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 * {
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
   color: white;
 }
 .header {
@@ -45,7 +44,7 @@ li {
 }
 .title {
   font-size:48px;
-  font-weight: 800;
+  font-weight: 700;
   color: #F9FAf8;
 }
 
@@ -56,15 +55,19 @@ li {
 
 button {
   background-color:#3882F6;
-  border-radius: 12px;
-  padding: 5px;
-  padding-left: 20px;
-  padding-right: 20px;
+  border: none;
+  border-radius: 10px;
+  padding: 8px;
+  padding-left: 25px;
+  padding-right: 25px;
+  font-size: 20px;
+  align-self: flex-start;
 }
 
-h1 {
+strong {
+  padding: 20px;
   color:#1F2937;
-  font-weight: 1000;
+  font-weight: 900;
   font-size: 36px;
 }
 
@@ -88,8 +91,7 @@ h1 {
 }
 
 .caption {
-  color: #1F2937;
-  font-weight: extra-light;
+  color: #878787;
   text-align: center;
   margin-top: 5px;
 }
@@ -99,25 +101,29 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
+  align-items: center;
   padding: 100px;
+}
+
+.quote-box {
+  display: flex;
+  flex-direction: column;
 }
 
 .quotes {
   font-size: 36px;
-  font-weight: light;
+  font-weight: 300;
   font-style: italic;
   align-self: center;
   color: #1F2937;
+  margin: 10px;
 }
 
 #quote_author {
   font-size: 18px;
-  font-weight: 1000;
-  font-style: bold;
+  font-weight: 900;
   color: #1F2937;
-  align-self: center;
-  text-align: right;
+  align-self: flex-end;
 }
 
 .white_backdrop {
